grammar.js
    program: $ => choice(
      $.shebang,
      prec(2,seq(
        optional(choice(
          seq($.shebang, token.immediate(/\r?\n/)),
          alias($.comment_block_BOF, $.comment_block)
        )),
        repeat($._line),
        optional(choice(
          $.progn,
          $.system_command,
          alias(token(/[kp]\)[^\r\n]*/), $.dsl),
          alias($._line_comment, $.comment),
          alias($.comment_terminal,$.comment))) // due to EOF
      ))),

    _line: $ => choice(
      seq($.system_command, /\r?\n/),
      seq($.progn, /\r?\n/),
      seq(alias(token(/[kp]\)[^\r\n]*/), $.dsl), token.immediate(/\r?\n/)),
      seq(alias($._line_comment, $.comment),  token.immediate(/\r?\n/)),
      /\r?\n/
    ),

    // a line in q is an implicit progn, returning the last expression
    progn: $ => prec.right(seq(
      repeat(seq(optional($._expression),$._seperator)),
      choice(field("output", $._expression), seq(optional($._expression),$._seperator))
    )),

    // semicolon catches whitespaces
    _seperator: $ => prec.right(alias(';', $.semicolon)),

    _expression: $ => prec(
      -1,
      choice(
        alias($._prefix_expression, $.func_app),
        $.bracket_progn,
        // regular
        $._subexpression
      ),
    ),

    _subexpression: $ => prec.right(
      choice(
        $._nonterminal_exp,
        $._terminal_exp
      )),

    _nonterminal_exp: $ => prec.right(
      choice(
      $._atomic_exp,
      $.sql_expression,
      $.func_app
    )),

    _atomic_exp: $ => choice(
      alias($.func_app_with_param, $.func_app),
      $._literal_definition,
      $.variable,
      $.parenthesis_exp
    ),

    func_app: $ => prec.right(
      choice(
        // implicit currying or unary application
        seq(field("function", $._atomic_exp),
          field("parameter1", $._nonterminal_exp)),
        // implicit binary application with infix
        seq(field("parameter1",$._atomic_exp),
          field("function", choice($._infix_func, alias($.immediate_minus, $.builtin_infix_func))),
          field("parameter2", $._nonterminal_exp)),
        // we can assign any expression
        seq(field("parameter1",$._atomic_exp),
          field("function", alias(':', $.assignment_func)),
          field("parameter2", $._subexpression))
      )),

    parameter_pass: $ => seq(
      '[',
      optional($._expression),
      // we alias semicolon since projections could be important
      repeat(
        seq($._seperator,optional($._expression))
      ),
      ']'
    ),

    _infix_func: $ => prec(1,choice(
      $.builtin_infix_func,
      $.infix_mod_func,
      $.assignment_func
    )),

    infix_mod_func: $ => seq(
      field("function", choice($._atomic_exp, $._infix_func)),
      field("modifier", $.infix_func_modifier)
    ),

    infix_func_modifier: $ => choice(
      token.immediate(
        prec(1, choice(
          '\/', // Over
          '\/:' // each right
        ))),
      '\'', // each or case
      token(choice(
        '\\', // Scan
        '\\:', // each left
        '\':' // each paralel or each prior
      ))
    ),

    //  regular infix funcs except comma
    builtin_infix_func: $ => choice(
      '-',
      token(choice('+',  '*', '%', // simple arithmetic without minus cuz it's special
        '>', '<', '=', '<>', '>=', '<=','~', // comparison operators
        '_', '#', '$', '!',
        '.', // apply
        '@', // trap
        'mmu', 'lsq', // matrix
        '?', 'bin', 'binr', 'in', 'within', // search
        'or','and','|', '&', // logic operators
        'each', 'peach',
        'setenv', 'set',
        'div', 'mod', // interger
        'wavg', 'wsum', // weighted
        'cor', 'cov', 'scov', // stats
        'cross',
        'union', 'inter', 'except', 'sublist', // set operations
        'vs', 'sv', // string to list or viceversa
        'ss', 'like', // substring searching
        'mmax', 'mmin', 'mavg', 'msum', 'mdev', 'mcount', 'ema', // moving stuff
        'ij', 'ijf', 'uj', 'ujf', 'lj', 'ljf', 'asof', 'pj', '^', // table joins
        'insert', 'upsert',
        'xasc', 'xdesc', 'xcol', 'xcols', 'xkey', // table stuff
        'xprev', 'xrank',
        'xbar','xexp', 'xlog', // math functions
        '0:', '1:', '2:', // file streaming
        ',',
        'dsave',
        'fby'))
    ),

    // :: is also the empty expression, be careful of that
    assignment_func: $ => prec.right(choice(
      ':', // care for this symbol
      token(choice(
        '::',
        // regular assignment
        '+:', '-:', '*:', '%:', // math
        '>:', '<:', '~:', '=:', // comparison
        '_:', '#:', '$:', '!:', // list manip
        '|:', "$:", "&:", // logic
        '?:', // search?
        '^:', // fill assign?
        ',:',
        '@:'
      )))),

    sql_expression: $ => prec.right(seq(
      choice(
        seq(
          'select',
          optional($.limit_expression),
          optional('distinct'),
          optional(field("columns", $.table_columns)),
          optional(seq('by', field("keys" ,$.table_columns)))
        ),
        seq(
          'exec',
          optional('distinct'),
          optional(field("columns", $.table_columns)),
          optional(seq('by', field("keys" ,$.table_columns)))
        ),
        seq(
          'update',
          optional(field("columns", $.table_columns)),
          optional(seq('by', field("keys" ,$.table_columns)))
        ),
        seq(
          'delete',
          optional(field("columns", $.table_columns)),
        ),
      ),
      'from',
      field("table", $._expression),
      optional(
        field("conditions",$.table_conditions)
      ))),

    limit_expression: $ => seq(
      '[',
      choice(
        field("limit",$._subexpression),
        seq(
          optional(seq(field("limit", $._subexpression), $._seperator)),
          $.order_expression)
      ),
      ']'
    ),

    order_expression: $ => seq(
      field("order", token(prec(10, choice('>', '<')))),
      field("column", $._subexpression)
    ),

    table_conditions: $ => seq(
      token(prec(1, 'where')),
      $.table_columns
    ),

    table_columns: $ => prec.right(seq($._subexpression, repeat(prec(7,$._table_expression_wrapper)))),

    _table_expression_wrapper: $ => prec.right(
      seq(token(prec(100,',')),$._subexpression)
    ),

    parenthesis_exp: $ => seq(
      seq('(', $._expression, ')')
    ),

    // all the regex is after this
    // a variable or function, basically an identifier
    variable: $ => prec.right(choice(
      // naked identifier
      field("element", choice($.namespace, alias($._init_identifier, $.identifier))),
      seq(
        choice($.namespace,alias($._init_identifier, $.identifier)),
        $._variable_period,
        optional($._variable_repeat),
        optional(field("element", $.identifier))
      )
    )),

    _init_identifier: $ => token(/[a-zA-Z][a-zA-Z0-9_]*/),
    namespace: $ => token(/\.[a-zA-Z][a-zA-Z0-9_]*/),

    identifier: $ => token.immediate(prec(1, /[a-zA-Z0-9_]+/)),

    _variable_repeat: $ => prec.right(
      repeat1(seq($.identifier, $._variable_period)),
    ),

    _variable_period: $ => token.immediate(prec(1,'.')),

    // any regular number
    number: $ => token(choice(
      // all digits without point are long
      alias(token(choice(
        /-?\d+j?/, /0[NWnw]j?/
      )), $.long),
      alias(token(
        /[01]b/
      ), $.boolean),
      alias(token(
        /0x[0-9a-fA-F]/
      ), $.byte),
      alias(token(
        /0[Nn]g/
      ), $.guid),
      alias(token(choice(
        /-?\d+h/, /0[NWnw]h/, /-0[Ww]h/
      )), $.short),
      alias(token(choice(
        /-?\d+i/, /0[NWnw]i/, /-0[Ww]i/
      )), $.int),
      alias(token(choice(
        /-?\d+\.?\d*(e[-+]?\d+)?f?/,
        /-?\.\d+(e[-+]?\d+)?f?/,
        /0[nw]f?/,
        /0[NW]f/,
        /-0[Ww]f?/
      )), $.float),
      alias(token(choice(
        /-?\d+\.?\d*(e-?\d+)?e/,
        /-?\.\d+(e-?\d+)?e/,
        /0[NWnw]e/,
        /-0[Ww]e/
      )), $.real),
    )),

    number_list: $ => choice(
      token(/[01]+b/),
      prec(10,seq(
      $.number,
      $._nlist_sub
    ))),

    byte_list: $ => token(prec(1,/0x[0-9a-fA-F][0-9a-fA-F]+/)),

    _nlist_sub: $ => prec.right(repeat1(prec(19,$.number))),

    char: $ => prec(1, seq(
      '"',
      choice(
        $.regular_char,
        $.escape_sequence
      ),
      '"'
    )),

    // string has at least 2 characters or none at all
    string: $ => choice(
      token('""'),
      seq(
        '"',
        repeat1(choice(
          alias(token.immediate(prec(1, /[^\\"\r\n]+/)), $.string_fragment),
          $.escape_sequence
        )),
        '"'
      )
    ),

    symbol: $ => choice(
      alias(token(/`:[a-zA-Z0-9\._:\\\/]*/), $.file_symbol),
      alias(token(/`[a-zA-Z0-9\._:]*/), $.regular_symbol)
    ),
    // no gaps for symbol list
    symbol_list: $ => seq(
      $.symbol,
      repeat1(alias($._slist_sub, $.symbol))
    ),

    _slist_sub: $ => choice(
      alias(token.immediate(prec(1,/`:[a-zA-Z0-9\._:\\\/]*/)), $.file_symbol),
      alias(token.immediate(prec(1,/`[a-zA-Z0-9\._:]*/)), $.regular_symbol)
    ),

    // catching invalid dates and invalid floats, must start with period or decimal
    // has lower precedence over symbols numbers and temporal
    comment: $ => /(\r?\n)?\/[^\n]*/,

    _line_comment: $ => token(prec(100, /\/[^\r\n]*[^ \t\r\n][^\r\n]*/)),

    // multiline coments have to start with / then end with \
    // comment blocks have the flush with left side
    comment_block: $ => seq(
      token(prec(2,/\r?\n\/[ \t]*\r?\n/)),
      $._comment_block_body
    ),

    // comment block that starts at BOF
    _comment_block_body: $ => seq(
      repeat(token.immediate(prec(2,choice( // always choose repeat over ending loop
        /[^\n\\][^\n]*\r?\n/, // not \ immediately
        /\r?\n/ // straight up newline
      )))),
      token.immediate(choice(
        prec(1,/\\[ \t]*/), // ending comment block
        // EOF
        /[^\n\\][^\n]*/ // not \ immediately
      ))
    ),

    // comment block that end on EOF
    _integer: $ => token(/[0-9]+i?/),

    // some non white space thing, used for system commands
    system_command: $ => choice(
      // group commands by syntax group
      // naked sys command that should not accept anything
      field("command", alias(token.immediate(prec(0, /\\[Eru]/)), $.command)),
      // optional subexpression
      seq(
        field("command", alias(token.immediate(prec(0, /\\[abBdfv]/)), $.command)),
        optional($._subexpression)
      ),
      // mandatory subexpression
      seq(
        field("command", alias(token.immediate(prec(0, '\\x')), $.command)),
        $._subexpression
      ),
      // optional number list
      seq(
        field("command", alias(token.immediate(prec(0, /\\[cC]/)), $.command)),
        optional($.number_list)
      ),
      // optional glob
      seq(
        field("command", alias(token.immediate(prec(0, /\\(cd|_)/)), $.command)),
        optional($.glob)
      ),
      // mandatory glob
      seq(
        field("command", alias(token.immediate(prec(0, /\\[pl12]/)), $.command)),
        $.glob
      ),
      // optional integers
      seq(
        field("command", alias(token.immediate(prec(0, /\\[egoPsSTwWz]/)), $.command)),
        optional(field("command", $._integer, $.number))
      ),
      // 2 mandatory filepath for rename
      seq(
        field("command", alias(token.immediate(prec(0, '\\r')), $.command)),
        $.glob,
        $.glob
      ),
      // timer
      seq(
        field("command", alias(token.immediate(prec(0, '\\t')), $.command)),
        optional(
          choice(
            alias($._integer, $.number), // set timer interval
            seq(
              optional(
                seq(token.immediate(':'),
                  alias(token.immediate(/[0-9]+i?/), $.number)
                )
              ),
              $._subexpression)))),
      // time and space
      seq(
        field("command", alias(token.immediate(prec(0, '\\ts')), $.command)),
        seq(
          optional(
            seq(token.immediate(':'),
              alias(token.immediate(/[0-9]+i?/), $.number)
            )
          ),
          $._subexpression
        )
      ),
      // ignore everything after command
      seq(
        field("command", alias(token.immediate(prec(0, /\\\\?/)), $.command)),
        optional(token.immediate(prec(1, /[^\n]+/)))
      ),

      field("command", $.shell_command)
    ),

    shell_command: $ => seq(
      choice(
        token.immediate(prec(0, /\\[a-zA-Z]+/)),
        token.immediate(prec(-1, /\\[^ \t\n]+/)),
      ),
      repeat(/[^\r\n]*/)
    ),

    shebang: $ => seq(
      token.immediate('#!'),
      optional(token.immediate(/[ \t]+/)),
      alias(token.immediate(/.*/), $.executable),
    )
  }
});
